# cFS-demo

./: .env  .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  cFS_msgids.xlsx  docker-compose.yml  sample.env  start.sh
apps/cfdp/: CMakeLists.txt
apps/cfdp/fsw/mission_inc/: cfdp_perfids.h
apps/cfdp/fsw/platform_inc/: cfdp.h  cfdp_config.h  cfdp_msgids.h
apps/cfdp/fsw/src/: cfdp.c  cfdp.h  cfdp_events.h  cfdp_msg.h  cfdp_version.h  pdu.c  pdu.h  send_task.c  send_task.h  transaction.c  transaction.h
apps/cfdp/fsw/tables/: cfdp_table.c
apps/rpi_lib/: CMakeLists.txt
apps/rpi_lib/fsw/public_inc/: rpi_lib.h
apps/rpi_lib/fsw/src/: rpi_lib.c  rpi_lib_internal.h  rpi_lib_version.h  rpi_mock.c
apps/rpi_test/: CMakeLists.txt
apps/rpi_test/fsw/mission_inc/: rpi_test_perfids.h
apps/rpi_test/fsw/platform_inc/: rpi_test_msgids.h
apps/rpi_test/fsw/src/: rpi_test.c  rpi_test.h  rpi_test_events.h  rpi_test_msg.h  rpi_test_version.h
apps/sample_app/: CMakeLists.txt
apps/sch_lab/: CMakeLists.txt
apps/to_lab/: CMakeLists.txt
build-dev/: CMakeCache.txt  cfe_build_env.in  cfe_module_version.in  mission_vars.cache
build-dev/doc/: cfe-common.doxyfile  cfe-usersguide.doxyfile  mission-content.doxyfile  mission-detaildesign.doxyfile  osal-common.doxyfile  osalguide.doxyfile  osconfig-example.h
build-dev/inc/: cfe_mission_cfg.h  cfe_msg_hdr.h  cfe_msg_sechdr.h  cfe_perfids.h  cfe_resourceid_basevalue.h  cfe_resourceid_typedef.h
build-dev/src/: cfe_mission_strings.c
dockerfiles/: rpi4.Dockerfile  run_yamcs.sh  start.sh  ubuntu.Dockerfile  yamcs.Dockerfile
ground-station/: Dockerfile  package-lock.json  package.json  server.js  start.sh
ground-station/public/: index.html  telemetry.html
sample_defs/: cpu1_cfe_es_startup.scr  cpu2_cfe_es_startup.scr  targets.cmake  toolchain-cpu1.cmake
tools/: CMakeLists.txt
yamcs/: env.yamcs.west.yaml  pom.xml
(+43 files in other folders)
